updated readme with env change

--- a/Compute-Intensive/myconfig.json
+++ b/Compute-Intensive/myconfig.json
@@ -8,5 +8,8 @@
     "TEST": "OPS"
   },
   "Args": ["script.py"],
+  "MapDirs": {
+    "./.venv/*": "/.local"
+  },
   "Debugflags": ["trace:pf,threadrun,all", "debugsyscalls"]
 }
