--- a/Network-Based/Go/myconfig.json
+++ b/Network-Based/Go/myconfig.json
@@ -2,7 +2,8 @@
   "RunConfig": {
     "Verbose": true,
     "Ports": ["8080"],
-    "Accel": true
+    "Accel": true,
+    "CPUs": 2
   },
   "Env": {
     "Environment": "development",
