--- a/Network-Based/Go/myconfig.json
+++ b/Network-Based/Go/myconfig.json
@@ -1,7 +1,9 @@
 {
   "RunConfig": {
     "Verbose": true,
-    "Ports": ["8080"],
+    "Ports": [
+      "8080"
+    ],
     "Accel": true,
     "CPUs": 2
   },
@@ -9,5 +11,8 @@
     "Environment": "development",
     "TEST": "OPS"
   },
-  "Debugflags": ["trace:pf,threadrun", "debugsyscalls"]
+  "Debugflags": [
+    "trace:pf,threadrun",
+    "debugsyscalls"
+  ]
 }
