--- a/Network-Based/Go/myconfig.json
+++ b/Network-Based/Go/myconfig.json
@@ -3,7 +3,8 @@
     "Verbose": true,
     "Ports": ["8080"],
     "Accel": true,
-    "CPUs": 4
+    "CPUs": 4,
+    "Memory": "2G"
   },
   "Env": {
     "Environment": "development",
