--- a/Compute-Intensive/myconfig.json
+++ b/Compute-Intensive/myconfig.json
@@ -11,9 +11,8 @@
     "./.venv/bin/python": "/.local/bin/python",
     "./.venv/lib": "/.local/lib"
   },
+  "Env": {
+    "EXECUTION": "0"
+  },
   "Debugflags": ["trace:pf,threadrun", "debugsyscalls"]
 }
-
-
-
-
